--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.15"
   }
 }
